k8s/v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-ingress
  namespace: catalog-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /v2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 80
